v0.3.1/_sources/gallery/symbols/points_transparency.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/symbols/points_transparency.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_symbols_points_transparency.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_symbols_points_transparency.py:


Points with varying transparency
--------------------------------

Points can be plotted with different transparency levels by passing in an array
argument to the ``transparency`` parameter of :meth:`pygmt.Figure.plot`.

.. GENERATED FROM PYTHON SOURCE LINES 8-26



.. image:: /gallery/symbols/images/sphx_glr_points_transparency_001.png
    :alt: points transparency
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none


    <IPython.core.display.Image object>





|

.. code-block:: default


    import numpy as np
    import pygmt

    # prepare the input x and y data
    x = np.arange(0, 105, 5)
    y = np.ones(x.size)
    # transparency level in percentage from 0 (i.e., opaque) to 100
    transparency = x

    fig = pygmt.Figure()
    fig.basemap(
        region=[-5, 105, 0, 2],
        frame=['xaf+l"Transparency level"+u%', "WSrt"],
        projection="X15c/6c",
    )
    fig.plot(x=x, y=y, style="c0.6c", color="blue", pen="1p,red", transparency=transparency)
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.379 seconds)


.. _sphx_glr_download_gallery_symbols_points_transparency.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: points_transparency.py <points_transparency.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: points_transparency.ipynb <points_transparency.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
